fix: always have a scrollbar displayed

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,7 @@ body {
   font-size: 1.6rem;
   font-family: fonts.$defaultFontFamily;
   color: colors.$textDark;
+  overflow-y: scroll;
 }
 
 button,
